# ctl-node-firmware

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  esp_config.json  esp_mapping.json
components/ads112c04/: ads112c04.c
components/config_json/: CMakeLists.txt  esp_config_generate.py
components/control/: control.c  control.h
components/qlcp_lib/: CMakeLists.txt
components/sensors/: CMakeLists.txt  sensor.h  sensor_base.c  sensor_base.h
components/sensors/sensor_types/: current_sensor.c  current_sensor.h  load_cell.c  load_cell.h  pressure_transducer.c  pressure_transducer.h  resistance_sensor.c  resistance_sensor.h  thermocouple.c  thermocouple.h
main/: main.c  sensor_stream.c  setup.h
main/wifi/: network_manager.c  udp_tools.c  wifi_tools.h
