idf_component_register(
    SRCS
    "sensor_base.c"
    "sensor_types/pressure_transducer.c"
    "sensor_types/thermocouple.c"
    "sensor_types/load_cell.c"
    "sensor_types/resistance_sensor.c"
    "sensor_types/current_sensor.c"
    INCLUDE_DIRS
    "."
    "./sensor_types"
    REQUIRES
    ads112c04
)